@@ -28,26 +28,26 @@ class testGeneric extends CWebTest {
 			array('dashboard.php',					'Dashboard'),
 			array('dashconf.php',					'Dashboard configuration'),
 
-			array('overview.php',												'Overview \[refreshed every 30 sec\]'),
-			array('overview.php?form_refresh=1&groupid=0&type=0&view_style=0',	'Overview \[refreshed every 30 sec\]'),
-			array('overview.php?form_refresh=1&groupid=0&type=0&view_style=1',	'Overview \[refreshed every 30 sec\]'),
-			array('overview.php?form_refresh=1&groupid=0&type=1&view_style=0',	'Overview \[refreshed every 30 sec\]'),
-			array('overview.php?form_refresh=1&groupid=0&type=1&view_style=1',	'Overview \[refreshed every 30 sec\]'),
+			array('overview.php',												'Overview \[refreshed every 30 sec.\]'),
+			array('overview.php?form_refresh=1&groupid=0&type=0&view_style=0',	'Overview \[refreshed every 30 sec.\]'),
+			array('overview.php?form_refresh=1&groupid=0&type=0&view_style=1',	'Overview \[refreshed every 30 sec.\]'),
+			array('overview.php?form_refresh=1&groupid=0&type=1&view_style=0',	'Overview \[refreshed every 30 sec.\]'),
+			array('overview.php?form_refresh=1&groupid=0&type=1&view_style=1',	'Overview \[refreshed every 30 sec.\]'),
 
-			array('httpmon.php',					'Status of Web monitoring \[refreshed every 30 sec\]'),
-			array('latest.php',						'Latest data \[refreshed every 30 sec\]'),
-			array('tr_status.php',					'Status of triggers \[refreshed every 30 sec\]'),
+			array('httpmon.php',					'Status of Web monitoring \[refreshed every 30 sec.\]'),
+			array('latest.php',						'Latest data \[refreshed every 30 sec.\]'),
+			array('tr_status.php',					'Status of triggers \[refreshed every 30 sec.\]'),
 
-			array('events.php',						'Latest events \[refreshed every 30 sec\]'),
-			array('events.php?source=0',			'Latest events \[refreshed every 30 sec\]'),
-			array('events.php?source=1',			'Latest events \[refreshed every 30 sec\]'),
+			array('events.php',						'Latest events \[refreshed every 30 sec.\]'),
+			array('events.php?source=0',			'Latest events \[refreshed every 30 sec.\]'),
+			array('events.php?source=1',			'Latest events \[refreshed every 30 sec.\]'),
 
-			array('charts.php',						'Custom graphs \[refreshed every 30 sec\]'),
-			array('screens.php',					'Custom screens \[refreshed every 30 sec\]'),
-			array('slides.php',						'Custom slides \[refreshed every 30 sec\]'),
-			array('maps.php',						'Network maps \[refreshed every 30 sec\]'),
+			array('charts.php',						'Custom graphs \[refreshed every 30 sec.\]'),
+			array('screens.php',					'Custom screens \[refreshed every 30 sec.\]'),
+			array('slides.php',						'Custom slides \[refreshed every 30 sec.\]'),
+			array('maps.php',						'Network maps \[refreshed every 30 sec.\]'),
 			array('discovery.php',					'Status of discovery'),
-			array('srv_status.php',					'IT services \[refreshed every 30 sec\]'),
+			array('srv_status.php',					'IT services \[refreshed every 30 sec.\]'),
 
 			// inventory
 			array('hostinventoriesoverview.php',	'Host inventory overview'),
@@ -104,10 +104,10 @@ class testGeneric extends CWebTest {
 			array('auditlogs.php',					'Audit logs'),
 			array('auditacts.php',					'Audit actions'),
 
-			array('queue.php',						'Queue \[refreshed every 30 sec\]'),
-			array('queue.php?config=0',				'Queue \[refreshed every 30 sec\]'),
-			array('queue.php?config=1',				'Queue \[refreshed every 30 sec\]'),
-			array('queue.php?config=2',				'Queue \[refreshed every 30 sec\]'),
+			array('queue.php',						'Queue \[refreshed every 30 sec.\]'),
+			array('queue.php?config=0',				'Queue \[refreshed every 30 sec.\]'),
+			array('queue.php?config=1',				'Queue \[refreshed every 30 sec.\]'),
+			array('queue.php?config=2',				'Queue \[refreshed every 30 sec.\]'),
 
 			array('report4.php',					'Notification report'),
 			array('report4.php?period=daily',		'Notification report'),
