@@ -31,7 +31,7 @@ class testPageQueueOverviewByProxy extends CWebTest {
 	*/
 	public function testPageQueueOverviewByProxy_CheckLayout($proxy) {
 		$this->zbxTestLogin('queue.php?config=1');
-		$this->zbxTestCheckTitle('Queue \[refreshed every 30 sec\]');
+		$this->zbxTestCheckTitle('Queue \[refreshed every 30 sec.\]');
 		$this->zbxTestTextPresent('Queue');
 		$this->zbxTestTextPresent('QUEUE OF ITEMS TO BE UPDATED');
 		// Header
