@@ -23,7 +23,7 @@ require_once dirname(__FILE__).'/../include/class.cwebtest.php';
 class testPageStatusOfTriggers extends CWebTest {
 	public function testPageStatusOfTriggers_CheckLayout() {
 		$this->zbxTestLogin('tr_status.php');
-		$this->zbxTestCheckTitle('Status of triggers \[refreshed every 30 sec\]');
+		$this->zbxTestCheckTitle('Status of triggers \[refreshed every 30 sec.\]');
 		$this->zbxTestTextPresent('STATUS OF TRIGGERS');
 		$this->zbxTestTextPresent('Triggers');
 		$this->zbxTestTextPresent('Displaying');
@@ -34,7 +34,7 @@ class testPageStatusOfTriggers extends CWebTest {
 // Check that no real host or template names displayed
 	public function testPageStatusOfTriggers_NoHostNames() {
 		$this->zbxTestLogin('tr_status.php');
-		$this->zbxTestCheckTitle('Status of triggers \[refreshed every 30 sec\]');
+		$this->zbxTestCheckTitle('Status of triggers \[refreshed every 30 sec.\]');
 		$this->checkNoRealHostnames();
 	}
 }
